clean up dropout file

--- a/Code/Exploratory Data Analysis/All Data/All Data - Analyze Dropout.ipynb
+++ b/Code/Exploratory Data Analysis/All Data/All Data - Analyze Dropout.ipynb
@@ -1244,7 +1244,7 @@
    "source": [
     "## Full quarter history for these firms\n",
     "\n",
-    "Output to Excel"
+    "Output to Excel for investigation"
    ]
   },
   {
@@ -1406,7 +1406,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Checking combined calls"
+    "## Checking combined calls\n",
+    "\n",
+    "outputting excel file for investigation"
    ]
   },
   {
@@ -1574,470 +1576,6 @@
     "# Output cc for the firms in dropout_firms\n",
     "cc[cc['symbol'].isin(dropout_firms['ticker'])].sort_values(by=['symbol', 'earnings_call_date']).to_excel(r'cc_dropout_firms.xlsx', index=False)\n",
     "cc[cc['symbol'].isin(dropout_firms['ticker'])].sort_values(by=['symbol', 'earnings_call_date'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>symbol</th>\n",
-       "      <th>earnings_call_date</th>\n",
-       "      <th>source</th>\n",
-       "      <th>year</th>\n",
-       "      <th>quarter</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1653</th>\n",
-       "      <td>AMD</td>\n",
-       "      <td>2009-07-15</td>\n",
-       "      <td>web</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1654</th>\n",
-       "      <td>AMD</td>\n",
-       "      <td>2009-10-14</td>\n",
-       "      <td>web</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1655</th>\n",
-       "      <td>AMD</td>\n",
-       "      <td>2010-04-28</td>\n",
-       "      <td>web</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1656</th>\n",
-       "      <td>AMD</td>\n",
-       "      <td>2010-10-14</td>\n",
-       "      <td>web</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1657</th>\n",
-       "      <td>AMD</td>\n",
-       "      <td>2011-01-20</td>\n",
-       "      <td>web</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1658</th>\n",
-       "      <td>AMD</td>\n",
-       "      <td>2011-04-21</td>\n",
-       "      <td>web</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1659</th>\n",
-       "      <td>AMD</td>\n",
-       "      <td>2011-04-27</td>\n",
-       "      <td>web</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1660</th>\n",
-       "      <td>AMD</td>\n",
-       "      <td>2011-07-20</td>\n",
-       "      <td>web</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1661</th>\n",
-       "      <td>AMD</td>\n",
-       "      <td>2011-07-21</td>\n",
-       "      <td>web</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1662</th>\n",
-       "      <td>AMD</td>\n",
-       "      <td>2011-10-19</td>\n",
-       "      <td>web</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1663</th>\n",
-       "      <td>AMD</td>\n",
-       "      <td>2012-01-18</td>\n",
-       "      <td>web</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1664</th>\n",
-       "      <td>AMD</td>\n",
-       "      <td>2012-04-25</td>\n",
-       "      <td>web</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1665</th>\n",
-       "      <td>AMD</td>\n",
-       "      <td>2012-07-18</td>\n",
-       "      <td>web</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1666</th>\n",
-       "      <td>AMD</td>\n",
-       "      <td>2012-10-17</td>\n",
-       "      <td>web</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1667</th>\n",
-       "      <td>AMD</td>\n",
-       "      <td>2013-01-17</td>\n",
-       "      <td>web</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1668</th>\n",
-       "      <td>AMD</td>\n",
-       "      <td>2013-04-24</td>\n",
-       "      <td>web</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1669</th>\n",
-       "      <td>AMD</td>\n",
-       "      <td>2013-07-17</td>\n",
-       "      <td>web</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1670</th>\n",
-       "      <td>AMD</td>\n",
-       "      <td>2013-10-16</td>\n",
-       "      <td>web</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1671</th>\n",
-       "      <td>AMD</td>\n",
-       "      <td>2014-01-21</td>\n",
-       "      <td>web</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1672</th>\n",
-       "      <td>AMD</td>\n",
-       "      <td>2014-04-23</td>\n",
-       "      <td>web</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1673</th>\n",
-       "      <td>AMD</td>\n",
-       "      <td>2014-07-22</td>\n",
-       "      <td>web</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1674</th>\n",
-       "      <td>AMD</td>\n",
-       "      <td>2014-10-16</td>\n",
-       "      <td>web</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1675</th>\n",
-       "      <td>AMD</td>\n",
-       "      <td>2015-01-22</td>\n",
-       "      <td>web</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1676</th>\n",
-       "      <td>AMD</td>\n",
-       "      <td>2015-04-22</td>\n",
-       "      <td>web</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1677</th>\n",
-       "      <td>AMD</td>\n",
-       "      <td>2015-07-22</td>\n",
-       "      <td>web</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1678</th>\n",
-       "      <td>AMD</td>\n",
-       "      <td>2015-10-14</td>\n",
-       "      <td>web</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1679</th>\n",
-       "      <td>AMD</td>\n",
-       "      <td>2016-01-20</td>\n",
-       "      <td>web</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1680</th>\n",
-       "      <td>AMD</td>\n",
-       "      <td>2016-04-27</td>\n",
-       "      <td>web</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     symbol earnings_call_date source  year  quarter\n",
-       "1653    AMD         2009-07-15    web  2010        1\n",
-       "1654    AMD         2009-10-14    web  2010        2\n",
-       "1655    AMD         2010-04-28    web  2010        4\n",
-       "1656    AMD         2010-10-14    web  2010        3\n",
-       "1657    AMD         2011-01-20    web  2011        3\n",
-       "1658    AMD         2011-04-21    web  2011        1\n",
-       "1659    AMD         2011-04-27    web  2011        4\n",
-       "1660    AMD         2011-07-20    web  2012        1\n",
-       "1661    AMD         2011-07-21    web  2011        2\n",
-       "1662    AMD         2011-10-19    web  2012        2\n",
-       "1663    AMD         2012-01-18    web  2012        3\n",
-       "1664    AMD         2012-04-25    web  2012        4\n",
-       "1665    AMD         2012-07-18    web  2013        1\n",
-       "1666    AMD         2012-10-17    web  2013        2\n",
-       "1667    AMD         2013-01-17    web  2013        3\n",
-       "1668    AMD         2013-04-24    web  2013        4\n",
-       "1669    AMD         2013-07-17    web  2014        1\n",
-       "1670    AMD         2013-10-16    web  2014        2\n",
-       "1671    AMD         2014-01-21    web  2014        3\n",
-       "1672    AMD         2014-04-23    web  2014        4\n",
-       "1673    AMD         2014-07-22    web  2015        1\n",
-       "1674    AMD         2014-10-16    web  2015        2\n",
-       "1675    AMD         2015-01-22    web  2015        3\n",
-       "1676    AMD         2015-04-22    web  2015        4\n",
-       "1677    AMD         2015-07-22    web  2016        1\n",
-       "1678    AMD         2015-10-14    web  2016        2\n",
-       "1679    AMD         2016-01-20    web  2016        3\n",
-       "1680    AMD         2016-04-27    web  2016        4"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Check AMD\n",
-    "cc[cc['symbol'] == 'AMD']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For AMD, there is a clear inaccuracy. looking up online their q2 2016 call was on 07/21/2016, web data is just wrong by a fair amount\n",
-    "\n",
-    "yet we saw elsewhere for companies like nvidia - they really do report quarter and year results on a date before what you would expect for that quarter year"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Items far from max_date and hence more concerning"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ticker</th>\n",
-       "      <th>max_date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>189</th>\n",
-       "      <td>ADSK</td>\n",
-       "      <td>2016-04-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>885</th>\n",
-       "      <td>BTU</td>\n",
-       "      <td>2016-04-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1351</th>\n",
-       "      <td>CNHI</td>\n",
-       "      <td>2016-04-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1667</th>\n",
-       "      <td>DEO</td>\n",
-       "      <td>2015-10-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4870</th>\n",
-       "      <td>NVDA</td>\n",
-       "      <td>2016-04-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5855</th>\n",
-       "      <td>SAIC</td>\n",
-       "      <td>2016-04-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6920</th>\n",
-       "      <td>USM</td>\n",
-       "      <td>2016-04-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7013</th>\n",
-       "      <td>VRNT</td>\n",
-       "      <td>2016-04-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7129</th>\n",
-       "      <td>WFRD</td>\n",
-       "      <td>2015-10-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7241</th>\n",
-       "      <td>XIN</td>\n",
-       "      <td>2016-04-01</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     ticker   max_date\n",
-       "189    ADSK 2016-04-01\n",
-       "885     BTU 2016-04-01\n",
-       "1351   CNHI 2016-04-01\n",
-       "1667    DEO 2015-10-01\n",
-       "4870   NVDA 2016-04-01\n",
-       "5855   SAIC 2016-04-01\n",
-       "6920    USM 2016-04-01\n",
-       "7013   VRNT 2016-04-01\n",
-       "7129   WFRD 2015-10-01\n",
-       "7241    XIN 2016-04-01"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# items that are not close\n",
-    "print(len(df[df['max_date'] < '2016-07-01'][['ticker', 'max_date']].drop_duplicates()))\n",
-    "df[df['max_date'] < '2016-07-01'][['ticker', 'max_date']].drop_duplicates()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "ADSK had their Q2 2016 earnings call on august 27, 2015 actually\n",
-    "\n",
-    "BTU, peabody energy, seems to have gone bankrupt April 13, 2016\n",
-    "\n",
-    "CNHI had a q2 call on july 26, 2016, not sure why problem\n",
-    "\n",
-    "DEO appears to have had issues and not had calls\n",
-    "\n",
-    "NVDA had their Q2 2016 earnings call august 6, 2016 actually\n",
-    "\n",
-    "SAIC had their Q2 2016 earnings call september 1, 2015 actually\n",
-    "\n",
-    "USM seems to have had Q2 2016 call in feb 2016 actually, probably some lag after\n",
-    "\n",
-    "VRNT had Q2 2016 call in sep 2015 actually\n",
-    "\n",
-    "WFRD unclear date\n",
-    "\n",
-    "XIN had Q2 2016 call in august 2016, not sure why problem\n",
-    "\n",
-    "So mostly concerned about CNHI, XIN"
    ]
   },
   {
