notebook name fix

--- a/Code/Modelling/Autogluon/Autogluon_Tabular_Local.ipynb
+++ b/Code/Modelling/Autogluon/Autogluon_Tabular_Local.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Autogluon\n",
+    "# Autogluon Tabular\n",
     "\n",
-    "Use the Autogluon AutoML library to predict ratings."
+    "Use the Autogluon AutoML library to predict ratings using tabular data locally (mostly just financial statement variables)."
    ]
   },
   {
