--- a/Code/Modelling/Autogluon/Autogluon_Tabular_Local.ipynb
+++ b/Code/Modelling/Autogluon/Autogluon_Tabular_Local.ipynb
@@ -375,7 +375,14 @@
    "outputs": [],
    "source": [
     "# Removing columns: 'Rating Rank AAA is 10', 'transcript', 'Investment_Grade', 'Change Direction Since Last Fixed Quarter Date', 'Change Since Last Fixed Quarter Date', 'Next Rating', 'Next Rating Date', 'next_rating_date_or_end_of_data'\n",
-    "df = df.drop(columns=['Rating Rank AAA is 10', 'transcript', 'Investment_Grade', 'Change Direction Since Last Fixed Quarter Date', 'Change Since Last Fixed Quarter Date', 'Next Rating', 'Next Rating Date', 'next_rating_date_or_end_of_data'])"
+    "df = df.drop(columns=['Rating Rank AAA is 10', \n",
+    "                      'transcript', \n",
+    "                      'Investment_Grade', \n",
+    "                      'Change Direction Since Last Fixed Quarter Date', \n",
+    "                      'Change Since Last Fixed Quarter Date', \n",
+    "                      'Next Rating', \n",
+    "                      'Next Rating Date', \n",
+    "                      'next_rating_date_or_end_of_data'])"
    ]
   },
   {
