--- a/Code/Exploratory Data Analysis/All Data/All Data - NLP EDA - NER on Company Names.ipynb
+++ b/Code/Exploratory Data Analysis/All Data/All Data - NLP EDA - NER on Company Names.ipynb
@@ -200,7 +200,7 @@
     "\n",
     "print('Average number of company mentions:', df['company_mentions'].mean())\n",
     "\n",
-    "stattotex(round(df['company_mentions'].mean(), 2), 'avg_company_mentions', output_folder + 'Company Mentions Average.tex')"
+    "stattotex(round(df['company_mentions'].mean(), 2), 'avgCompanyMentions', output_folder + 'Company Mentions Average.tex')"
    ]
   }
  ],
