--- a/Code/Exploratory Data Analysis/All Data/All Data - NLP EDA.ipynb
+++ b/Code/Exploratory Data Analysis/All Data/All Data - NLP EDA.ipynb
@@ -35,16 +35,6 @@
       "[nltk_data]     C:\\Users\\ijyli\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -57,7 +47,8 @@
     "from nltk.probability import FreqDist\n",
     "import re\n",
     "nltk.download('punkt')  # Download NLTK tokenizer\n",
-    "nltk.download('stopwords')  # Download NLTK stop words"
+    "nltk.download('stopwords')  # Download NLTK stop words\n",
+    "from stattotex import *"
    ]
   },
   {
@@ -716,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +754,10 @@
     "plt.show()\n",
     "\n",
     "print('sum stats of call length')\n",
-    "print(df['num_words'].describe())"
+    "print(df['num_words'].describe())\n",
+    "\n",
+    "# stattotex\n",
+    "stattotex(round(df['num_words'].mean(), 2), 'avgCallLength', output_folder + 'avg_call_length.tex')"
    ]
   },
   {
