--- a/Code/Exploratory Data Analysis/All Data/All Data - Tabular EDA.ipynb
+++ b/Code/Exploratory Data Analysis/All Data/All Data - Tabular EDA.ipynb
@@ -48,7 +48,8 @@
     "# Packages\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from stattotex import *"
    ]
   },
   {
@@ -3075,21 +3076,14 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "536"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Number of unique firms (identified by ticker)\n",
-    "df['ticker'].nunique()"
+    "df['ticker'].nunique()\n",
+    "\n",
+    "# Save number of quarters and companies\n",
+    "stattotex(df['fixed_quarter_date'].nunique(), 'numQuarters', output_folder + 'num_quarters_and_companies.tex')\n",
+    "stattotex(df['ticker'].nunique(), 'numCompanies', output_folder + 'num_quarters_and_companies.tex')"
    ]
   },
   {
@@ -3484,7 +3478,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_13660\\2139239575.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_9544\\2139239575.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  mean_assets_by_rating = df.groupby('Rating')['totalDebt'].mean()\n"
      ]
     },
@@ -3522,7 +3516,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_13660\\796684613.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_9544\\796684613.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  mean_gross_profit_by_rating = df.groupby('Rating')[\"grossProfitRatio\"].mean()\n"
      ]
     },
@@ -3565,7 +3559,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_13660\\949429418.py:13: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_9544\\949429418.py:13: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  table_a1_replication = pd.concat([table_a1_replication, pd.DataFrame({'Item': variable, 'Count': var_count, 'Percent_of_Total_Assets': 100*var_mean/total_assets_mean}, index=[0])])\n"
      ]
     },
