--- a/Code/Exploratory Data Analysis/All Data/All Data - NLP EDA.ipynb
+++ b/Code/Exploratory Data Analysis/All Data/All Data - NLP EDA.ipynb
@@ -757,7 +757,9 @@
     "print(df['num_words'].describe())\n",
     "\n",
     "# stattotex\n",
-    "stattotex(round(df['num_words'].mean(), 2), 'avgCallLength', output_folder + 'avg_call_length.tex')"
+    "mean_formatted = round(df['num_words'].mean(), 2)\n",
+    "mean_formatted = f'{mean_formatted:,}'\n",
+    "stattotex(mean_formatted, 'avgCallLength', output_folder + 'avg_call_length.tex')"
    ]
   },
   {
