note not using anything from screener data

--- a/Code/Data Loading and Cleaning/Sectors/Combine Original and Filled Sector Data.ipynb
+++ b/Code/Data Loading and Cleaning/Sectors/Combine Original and Filled Sector Data.ipynb
@@ -1284,6 +1284,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Ultimately we are not using anything from the screener data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Limit variables to just Ticker and Sector"
    ]
   },
