--- a/Code/Data Loading and Cleaning/Sectors/Combine Original and Filled Sector Data.ipynb
+++ b/Code/Data Loading and Cleaning/Sectors/Combine Original and Filled Sector Data.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
        "[3144 rows x 8 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
        "[245 rows x 2 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
        "[3389 rows x 8 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +906,7 @@
        "[7193 rows x 11 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1235,7 +1235,7 @@
        "[3389 rows x 13 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1252,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1296,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1409,7 +1409,7 @@
        "[3389 rows x 2 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1425,12 +1425,148 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Rename ticker to lowercase for merge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_14868\\1826539685.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  combined.rename(columns={'Ticker': 'ticker'}, inplace=True)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ticker</th>\n",
+       "      <th>Sector</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CTVA</td>\n",
+       "      <td>Materials</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ALCO</td>\n",
+       "      <td>Consumer Staples</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>LMNR</td>\n",
+       "      <td>Consumer Staples</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SANW</td>\n",
+       "      <td>Consumer Staples</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>TRC</td>\n",
+       "      <td>Real Estate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3384</th>\n",
+       "      <td>RELX</td>\n",
+       "      <td>Information Technology</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3385</th>\n",
+       "      <td>TAL</td>\n",
+       "      <td>Consumer Discretionary</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3386</th>\n",
+       "      <td>TRTN</td>\n",
+       "      <td>Industrials</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3387</th>\n",
+       "      <td>VLRS</td>\n",
+       "      <td>Industrials</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3388</th>\n",
+       "      <td>XIN</td>\n",
+       "      <td>Real Estate</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3389 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     ticker                  Sector\n",
+       "0      CTVA               Materials\n",
+       "1      ALCO        Consumer Staples\n",
+       "2      LMNR        Consumer Staples\n",
+       "3      SANW        Consumer Staples\n",
+       "4       TRC             Real Estate\n",
+       "...     ...                     ...\n",
+       "3384   RELX  Information Technology\n",
+       "3385    TAL  Consumer Discretionary\n",
+       "3386   TRTN             Industrials\n",
+       "3387   VLRS             Industrials\n",
+       "3388    XIN             Real Estate\n",
+       "\n",
+       "[3389 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined.rename(columns={'Ticker': 'ticker'}, inplace=True)\n",
+    "combined"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Final Output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
