completed multimodal run

--- a/Code/Modelling/Autogluon/Evaluate_Autogluon_Multimodal_SCF.ipynb
+++ b/Code/Modelling/Autogluon/Evaluate_Autogluon_Multimodal_SCF.ipynb
@@ -11,12 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set model name to evaluate\n",
-    "model_name ="
+    "# Set model name\n",
+    "model_name = 'Autogluon_Multimodal_SCF'"
    ]
   },
   {
@@ -449,7 +449,7 @@
    ],
    "source": [
     "# Load model\n",
-    "predictor = MultiModalPredictor.load('AutogluonModels/' + model_name)\n",
+    "predictor = MultiModalPredictor.load(os.path.expanduser('~/Box/STAT 222 Capstone/Autogluon/Autogluon_Multimodal_SCF'))\n",
     "predictor"
    ]
   },
@@ -623,7 +623,7 @@
    ],
    "source": [
     "# Evaluation\n",
-    "predictor.evaluate(test_df, silent=True)"
+    "predictor.evaluate(test_df)"
    ]
   },
   {
