--- a/Code/Modelling/Autogluon/Fit_Autogluon_Multimodal_SCF.ipynb
+++ b/Code/Modelling/Autogluon/Fit_Autogluon_Multimodal_SCF.ipynb
@@ -21,8 +21,7 @@
     "import os\n",
     "import numpy as np\n",
     "warnings.filterwarnings('ignore')\n",
-    "from autogluon.multimodal import MultiModalPredictor\n",
-    "import uuid"
+    "from autogluon.multimodal import MultiModalPredictor"
    ]
   },
   {
@@ -593,7 +592,7 @@
    ],
    "source": [
     "# Fit model\n",
-    "predictor = MultiModalPredictor(label='Rating').fit(train_df)"
+    "predictor = MultiModalPredictor(label='Rating').fit(train_df, save_path=os.path.expanduser('~/Box/STAT 222 Capstone/Autogluon/Autogluon_Multimodal_SCF'))"
    ]
   }
  ],
